Se agrego las versiones correctas al proyecto , se ordeno el codigo para ser mas legible , README actualizado

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,27 @@
 
 /*@import '~https://fonts.googleapis.com/icon?family=Material+Icons';*/
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Roboto', sans-serif; }
+
+.form-full-width {
+  width: 100%;
+}
+.margin-top {
+  margin-top: 15px;
+}
+.margin-left {
+  margin-left: 10px;
+}
+.radio-label-padding {
+  padding-right: 10px;
+  color: grey;
+}
+.form {
+  margin-left: 10px;
+  border: 2px solid lightgray;
+  width: 600px;
+  padding-left: 5px;
+  margin-top: 10px;
+}
